[package]
name = "handoff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
  "bigdecimal",
] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
serde = { version = "1.0.216", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
whynot-errors = "0.1.1"
